WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315032
Preferred width does not trim trailing whitespace before preserved newline
https://bugs.webkit.org/show_bug.cgi?id=315032
Summary
Preferred width does not trim trailing whitespace before preserved newline
alan
Reported
2026-05-18 10:58:43 PDT
ssia
Attachments
[fast-cq]Patch
(5.80 KB, patch)
2026-05-18 11:29 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-05-18 11:29:39 PDT
Created
attachment 479704
[details]
[fast-cq]Patch
EWS
Comment 2
2026-05-19 05:12:59 PDT
Committed
313480@main
(758dccb228d2): <
https://commits.webkit.org/313480@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479704
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-05-19 05:13:11 PDT
<
rdar://problem/177426037
>
Sammy Gill
Comment 4
2026-05-21 10:35:30 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/60075
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug